infrastructure/ks8/shopping-database-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: postgresql.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: postgresql
              port: 
                number: 5432
